--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -45,6 +45,13 @@
             <!--            </intent-filter>-->
         </activity>
         <activity android:name=".thread.CallBackActivity">
+            <!--            <intent-filter>-->
+            <!--                <action android:name="android.intent.action.MAIN" />-->
+
+            <!--                <category android:name="android.intent.category.LAUNCHER" />-->
+            <!--            </intent-filter>-->
+        </activity>
+        <activity android:name=".java.GenericActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
