--- a/app/build.gradle
+++ b/app/build.gradle
@@ -41,6 +41,10 @@ dependencies {
     //butterKnife
     implementation 'com.jakewharton:butterknife:10.2.0'
     annotationProcessor 'com.jakewharton:butterknife-compiler:10.2.0'
+    //eventbus
+    implementation 'org.greenrobot:eventbus:3.2.0'
+    //okhttp
+    implementation 'com.squareup.okhttp3:okhttp:3.14.6'
 
 //    implementation files('libs/processor.jar')
 
