--- a/app/build.gradle
+++ b/app/build.gradle
@@ -45,6 +45,7 @@ dependencies {
     implementation 'org.greenrobot:eventbus:3.2.0'
     //okhttp
     implementation 'com.squareup.okhttp3:okhttp:3.14.6'
+    implementation 'com.squareup.okhttp3:logging-interceptor:3.14.6'
 
 //    implementation files('libs/processor.jar')
 
